--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "dev": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,12 @@
   "bugs": {
     "url": "https://github.com/wuqiulee/monitor-sdk/issues"
   },
-  "homepage": "https://github.com/wuqiulee/monitor-sdk#readme"
+  "homepage": "https://github.com/wuqiulee/monitor-sdk#readme",
+  "devDependencies": {
+    "html-webpack-plugin": "^5.5.3",
+    "user-agent": "^1.0.4",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
+  }
 }
